- Generate random population with no constraints - Crossover with no constraints - New fitness function - with penalty - Commented out parent remove to enable elitism